[package]
name = "libmedium"
version = "0.2.1"
authors = ["Malte Veerman <malte.veerman@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Library to interface with lm_sensors"
repository = "https://gitlab.com/Maldela/libmedium"
readme = "README.md"
keywords = ["pwm", "fan", "hwmon", "sensor"]

[badges]
gitlab = { repository = "https://gitlab.com/Maldela/libmedium", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
measurements = { version = "0.10", optional = true }

[lib]
doctest = false

[features]
default = ["writable"]

# Feature that enables the writable versions of all structs and functions to interact with the system's sensors.
writable = []

# Feature that replaces units with those found in `measurements`.
measurements_units = ["measurements"]

# Feature that enables parsing of arbitrary paths for hwmons and sensors.
# It should only be needed for debug and testing purposes.
unrestricted_parsing = []

[workspace]
members = [
    "examples/print_temps",
    "examples/pwms_to_max",
]
