[package]
name = "libmedium"
version = "0.6.1"
authors = ["Malte Veerman <malte.veerman@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Library to interface with lm_sensors"
repository = "https://gitlab.com/Maldela/libmedium"
readme = "README.md"
keywords = ["pwm", "fan", "hwmon", "sensor"]
categories = ["api-bindings", "hardware-support"]

[badges]
gitlab = { repository = "https://gitlab.com/Maldela/libmedium", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
uom = { version = "0.32", optional = true }

[dev-dependencies]
temp-dir = "0.1"

[lib]
doctest = false

[features]
default = ["writeable"]

# Feature that enables the writeable versions of all structs and functions to interact with the system's sensors.
writeable = []

# Feature that replaces units with those found in `uom`.
uom_units = ["uom"]

# Feature that enables parsing of arbitrary paths for hwmons and sensors.
# It should only be needed for debug and testing purposes.
unrestricted_parsing = []

[workspace]
members = [
    "examples/print_temps",
    "examples/pwms_to_max",
]
