[package]
name = "libmedium"
version = "0.8.0"
authors = ["Malte Veerman <malte.veerman@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Library to interface with lm_sensors"
repository = "https://gitlab.com/Maldela/libmedium"
readme = "README.md"
keywords = ["pwm", "fan", "hwmon", "sensor"]
categories = ["api-bindings", "hardware-support"]

[lints.rust]
unsafe_code = "forbid"
unstable_features = "forbid"
missing_docs = "deny"
missing_debug_implementations = "deny"
missing_copy_implementations = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[dependencies]
uom = { version = "0.36", optional = true }
tokio = { version = "1", features = ["fs"], optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
temp-dir = "0.1"
tokio = { version = "1", features = ["fs", "macros", "rt"] }

[lib]
doctest = false

[features]
default = ["sync", "writeable"]

# Feature that enables the writeable versions of all structs and functions to interact with the system's sensors.
writeable = []

# Feature that uses the std library for synchronous I/O.
sync = []

# Feature that uses the tokio runtime for asynchronous I/O.
async = ["tokio", "async-trait"]

# Feature that replaces units with those found in `uom`.
uom_units = ["uom"]

# Feature that enables parsing of arbitrary paths for hwmons and sensors.
# It should only be needed for debug and testing purposes.
unrestricted_parsing = []

[workspace]
members = [
    "examples/print_temps",
    "examples/pwms_to_max",
]
