[package]
name = "print_temps"
version = "0.1.0"
authors = ["Malte Veerman <malte.veerman@gmail.com>"]
license = "MIT"
description = "Example how to print all temp sensors and their values to terminal."
repository = "https://gitlab.com/Maldela/libmedium"
edition = "2018"

[dependencies]
libmedium = { path = "../.." }